third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/round-trip/very_large_1.decompiled.baseline.exp
processed 1 task
task 0 lines 3-23:  publish [module 0xcafe::Module0 {]
Error: compilation errors:
 error: unexpected token
  ┌─ TEMPFILE:6:38
  │
6 │         let _t1: |||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop, ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop, ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop| has copy + drop) has copy + drop = |arg0: ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop,arg1: ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop,arg2: ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop| lambda__2__function32(arg0, arg1, arg2);
  │                                      ^
  │                                      │
  │                                      Unexpected '|'
  │                                      Expected ';'


