third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/round-trip/very_large_1.decompiled
//**** Cross-compiled for `move` syntax from `tests/no-v1-comparison/closures/very_large_1.move`

//# publish
module 0xcafe::Module0 {
    public fun function32() {
        let _t1: |||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop, ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop, ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop| has copy + drop) has copy + drop = |arg0: ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop,arg1: ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop,arg2: ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop| lambda__2__function32(arg0, arg1, arg2);
        let _t0: |||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop, ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop, ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop| has copy + drop) has copy + drop = |arg0: ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop,arg1: ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop,arg2: ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop| lambda__4__function32(arg0, arg1, arg2);
        let _t3 = &mut _t0;
        *_t3 = _t1;
    }
    fun lambda__2__function32(p0: ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop, p1: ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop, p2: ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop): ||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop| has copy + drop {
        |arg0: |bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop,arg1: |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop,arg2: |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop| lambda__1__function32(arg0, arg1, arg2)
    }
    fun lambda__4__function32(p0: ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop, p1: ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop, p2: ||| has copy + drop|(||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop|(u8) has copy + drop) has copy + drop): ||bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop| has copy + drop {
        |arg0: |bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop,arg1: |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop,arg2: |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop| lambda__3__function32(arg0, arg1, arg2)
    }
    fun lambda__1__function32(p0: |bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, p1: |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, p2: |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop) {
        ()
    }
    fun lambda__3__function32(p0: |bool, bool, u8, bool, u8, u8, ||| has copy + drop, || has copy + drop, || has copy + drop|(|| has copy + drop) has copy + drop, ||| has copy + drop|(|| has copy + drop) has copy + drop|(u8) has copy + drop, p1: |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop, p2: |||| has copy + drop|(|| has copy + drop) has copy + drop|(||| has copy + drop|(|| has copy + drop) has copy + drop) has copy + drop) {
        ()
    }
}
